# memory_reader

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/: bump_allocator.hpp  memory_cursor.hpp  memory_view.hpp  padding.h
test/: test_memory_cursor.cpp  test_memory_view.cpp  test_padding.cpp
